рефакторинг и замена аннотаций
